--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ dotenv = "0.15.0"
 anyhow = "1.0.82" # For simple error handling in our binaries
 chrono = { version = "0.4", features = ["serde"] }
 futures-util = "0.3"
-axum = { version = "0.7", features = ["json"] }
+axum = { version = "0.7", features = ["json", "macros"] }
 tower = "0.4"
 serde_json = "1.0"
 parking_lot = "0.12"
-ct-merkle = "0.2.0"
+ct-merkle = { version = "0.2.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+base64 = "0.21"
 
 # Define our two separate binaries
 [[bin]]
