--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,19 @@ parking_lot = "0.12"
 ct-merkle = { version = "0.2.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 base64 = "0.21"
+digest = "0.10"
+rand = "0.8"
+reqwest = { version = "0.11", features = ["json"] }
 
-# Define our two separate binaries
+# Define our binaries
 [[bin]]
-name = "populator"
-path = "src/bin/populator.rs"
+name = "setup"
+path = "src/bin/setup.rs"
 
 [[bin]]
 name = "listener"
 path = "src/bin/listener.rs"
+
+[[bin]]
+name = "tester"
+path = "src/bin/tester.rs"
