--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
 deadpool-postgres = "0.14"
 dashmap = "6.0"
+chrono = "0.4"
 sha2 = "0.10.8"
 dotenv = "0.15.0"
 anyhow = "1.0.82" # For simple error handling in our binaries
