--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,8 +54,8 @@ unnameable_types = "deny"
 missing_docs_in_private_items = "deny"
 missing_errors_doc = "deny"
 missing_panics_doc = "deny"
-# doc_markdown = "deny"
-# unwrap_used = "deny"
+doc_markdown = "deny"
+unwrap_used = "deny"
 # print_stdout = "deny"
 # print_stderr = "deny"
 # arithmetic_side_effects = "warn"
