--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ reqwest = { version = "0.11", features = ["json"] }
 serial_test = "3.2.0"
 crossterm = "0.28"
 clap = { version = "4.5", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
 # Define our binaries
 [[bin]]
@@ -56,15 +58,15 @@ missing_errors_doc = "deny"
 missing_panics_doc = "deny"
 doc_markdown = "deny"
 unwrap_used = "deny"
-# print_stdout = "deny"
-# print_stderr = "deny"
-# arithmetic_side_effects = "warn"
-# shadow_unrelated = "warn"
-# cognitive_complexity = "warn"
-# disallowed_macros = "deny"
+disallowed_macros = "deny"
+shadow_unrelated = "deny"
+cognitive_complexity = "deny"
+# arithmetic_side_effects = "deny"
+print_stdout = "deny"
+print_stderr = "deny"
 # groups, not a single lint
+suspicious = "deny"
+complexity = "deny"
+style = "deny"
+perf = "deny"
 # pedantic = "deny"
-# suspicious = "deny"
-# complexity = "deny"
-# style = "warn"
-# perf = "warn"
