--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ unwrap_used = "deny"
 disallowed_macros = "deny"
 shadow_unrelated = "deny"
 cognitive_complexity = "deny"
-# arithmetic_side_effects = "deny"
+arithmetic_side_effects = "deny"
 print_stdout = "deny"
 print_stderr = "deny"
 # groups, not a single lint
