--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ dashmap = "6.0"
 chrono = "0.4"
 sha2 = "0.10.8"
 dotenv = "0.15.0"
-anyhow = "1.0.82" # For simple error handling in our binaries
+anyhow = "1.0.82"
 axum = { version = "0.7", features = ["json", "macros"] }
 serde_json = "1.0"
 parking_lot = "0.12"
@@ -58,12 +58,15 @@ missing_errors_doc = "deny"
 missing_panics_doc = "deny"
 doc_markdown = "deny"
 unwrap_used = "deny"
-disallowed_macros = "deny"
+panic = "deny"
 shadow_unrelated = "deny"
 cognitive_complexity = "deny"
 arithmetic_side_effects = "deny"
 print_stdout = "deny"
 print_stderr = "deny"
+indexing_slicing = "deny"
+missing_const_for_fn = "deny"
+future_not_send = "deny"
 # groups, not a single lint
 suspicious = "deny"
 complexity = "deny"
