wip: lint pass 6 complete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,4 +72,7 @@ suspicious = "deny"
 complexity = "deny"
 style = "deny"
 perf = "deny"
-# pedantic = "deny"
+# uninlined_format_args = "deny"
+# must_use_candidate = "deny"
+# redundant_closure_for_method_calls = "deny"
+pedantic = "deny"
