fix: consistency proof not receiving root as argument, stricter monitor.rs, guide

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgres://user:user@localhost:5432/merkle_db
+MRKL_SERVER_ADDR=127.0.0.1:3000
+MRKL_SERVER_URL=http://localhost:3000
+MRKL_DASHBOARD_REFRESH_INTERVAL=1
