todo/readme polish

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://user:user@localhost:5432/merkle_db
+DATABASE_URL=postgres://user:user@localhost:5432/trellis_db
 TRELLIS_SERVER_ADDR=127.0.0.1:3000
 TRELLIS_SERVER_URL=http://localhost:3000
 TRELLIS_DASHBOARD_REFRESH_INTERVAL=1
