--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ crossterm = "0.28"
 clap = { version = "4.5", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+rand = "0.9.2"
 
 # Define our binaries
 [[bin]]
