--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = { version = "0.11", features = ["json"] }
 serial_test = "3.2.0"
 crossterm = "0.28"
 clap = { version = "4.5", features = ["derive"] }
+futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 rand = "0.9.2"
