--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4"
 sha2 = "0.10.8"
 dotenv = "0.15.0"
 anyhow = "1.0.82"
-axum = { version = "0.7", features = ["json", "macros"] }
+axum = { version = "0.7", features = ["http2", "json", "macros"] }
 serde_json = "1.0"
 parking_lot = "0.12"
 ct-merkle = { version = "0.2.0", features = ["serde"] }
@@ -27,6 +27,7 @@ futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 rand = "0.9.2"
+num_cpus = "1.16"
 
 # Define our binaries
 [[bin]]
