batch interval and batch size taken from env

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DATABASE_URL=postgres://user:user@localhost:5432/trellis_db
 TRELLIS_SERVER_ADDR=127.0.0.1:3000
+TRELLIS_BATCH_INTERVAL_SECS=1
+TRELLIS_BATCH_SIZE=30000
 TRELLIS_SERVER_URL=http://localhost:3000
 TRELLIS_DASHBOARD_REFRESH_INTERVAL=1
